Bug 526040: Merge Java 9 related changes from JDT - tests.compiler